# Aniwa

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPRINT.md  aniwa_report.html  pyproject.toml  requirements.txt
aniwa/: cli.py  presets.py
aniwa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aniwa/charts/: __init__.py  pdf_charts.py
aniwa/core/: profiler.py
aniwa/io/: readers.py
aniwa/models/: enums.py  profile.py
aniwa/reports/: console.py  json_report.py  markdown_report.py  pdf_report.py
aniwa/reports/templates/: clean.html  compact.html  dark.html  default.html  enterprise.html  report.html
aniwa/utils/: logging.py  progress.py
docs/: index.md  roadmap.md
docs/architecture/: execution-flow.md  file-readers.md  future-architecture.md  models.md  overview.md  performance-strategy.md  profiling-engine.md  reporting-system.md  scalability-roadmap.md  system-design.md  template-engine.md
docs/developer-guide/: adding-file-readers.md  adding-insights.md  adding-report-formats.md  adding-report-templates.md  architecture.md  code-style.md  dependency-management.md  local-development.md  release-process.md  testing.md
docs/project/: philosophy.md
docs/release-notes/: index.md  v0.1.0.md  v0.1.1.md  v0.1.2.md
docs/user-guide/: cli-reference.md  report-formats.md  report-templates.md  sections.md
examples/: customers.csv  customers.tsv  customers.xls  customers.xlsx  ecommerce_orders.csv  user_activity.tsv
tests/: test_cli.py  test_config.py  test_pdf_charts.py  test_pdf_report.py  test_presets.py  test_profiler.py  test_readers.py
