[project]
name = "aniwa"
version = "0.1.0"
description = "Universal dataset profiling and intelligence tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "polars>=1.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
aniwa = "aniwa.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]