[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aniwa"
version = "0.1.0"
description = "Universal dataset profiling and intelligence tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Reginald Erzoah" }
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "polars>=1.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
    "fastexcel>=0.12.0"
]

[project.scripts]
aniwa = "aniwa.cli:app"